<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_ingressos_olimpicos"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="br.com.cristiana.olimpiadasingressos.IngressosOlimpicosActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="94dp"
            app:srcCompat="@mipmap/ic_olimpiadas"
            android:id="@+id/imageView8"
            android:layout_marginStart="200dp" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:text="@string/app_nome"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView4"
                    android:layout_weight="1" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/edtNome"
                    android:layout_weight="1" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/app_idade"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView5"
                    android:layout_weight="1" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:ems="10"
                    android:digits="1234567890"
                    android:maxLength="2"
                    android:id="@+id/edtIdade"
                    android:layout_weight="1"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:text="@string/app_modal"
                    android:layout_width="126dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView6" />

                <Spinner
                    android:layout_width="196dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/spModalidade"
                    android:entries="@array/app_modalidades"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:text="@string/app_periodo"
                    android:layout_width="125dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView7" />

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:id="@+id/rdgPeriodo">

                    <RadioButton
                        android:text="@string/app_manha"
                        android:layout_width="178dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/rbtnManha" />

                    <RadioButton
                        android:text="@string/app_tarde"
                        android:layout_width="187dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/rbtTarde" />

                    <RadioButton
                        android:text="@string/app_noite"
                        android:layout_width="222dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/rbtNoite" />
                </RadioGroup>

            </LinearLayout>
        </LinearLayout>

        <Button
            android:text="@string/app_reservar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/button"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="25dp"
            android:layout_alignParentStart="true"
            android:onClick="reservar"/>
    </LinearLayout>

</RelativeLayout>
